transfer ,deposit feature added

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "request": "launch",
       "args": [],
       "stopAtEntry": false,
-      "cwd": "c:\\Users\\somya\\Downloads\\complete-javascript-course-master\\complete-javascript-course-master\\11-Arrays-Bankist\\starter",
+      "cwd": "c:\\Users\\somya\\Downloads\\complete-javascript-course-master\\complete-javascript-course-master\\11-Arrays-Bankist\\bankist",
       "environment": [],
-      "program": "c:\\Users\\somya\\Downloads\\complete-javascript-course-master\\complete-javascript-course-master\\11-Arrays-Bankist\\starter\\build\\Debug\\outDebug",
+      "program": "c:\\Users\\somya\\Downloads\\complete-javascript-course-master\\complete-javascript-course-master\\11-Arrays-Bankist\\bankist\\build\\Debug\\outDebug",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
